fixed contact map going over dropdown menu, fixed profile icon not showing in other pages than homepage

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -147,7 +147,6 @@
   height: 500px;
   border-radius: 1%;
   text-align: center;
-  z-index: 1;
 }
 
 /* Navbar   start: */
@@ -979,6 +978,5 @@ button[type="submit"]:hover {
   display: block;
   opacity: 1;
 }
-
 
 /* Management End */
